--- a/UCSCBusBuddy/AndroidManifest.xml
+++ b/UCSCBusBuddy/AndroidManifest.xml
@@ -22,6 +22,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.ucscbusbuddy.BusScheduleActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.example.ucscbusbuddy.SelectStopActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.example.ucscbusbuddy.ClosestStopActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
