--- a/UCSCBusBuddy/AndroidManifest.xml
+++ b/UCSCBusBuddy/AndroidManifest.xml
@@ -47,5 +47,5 @@
                 android:value="com.example.ucscbusbuddy.MainActivity" />
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
