--- a/UCSCBusBuddy/bin/AndroidManifest.xml
+++ b/UCSCBusBuddy/bin/AndroidManifest.xml
@@ -6,7 +6,9 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
