--- a/UCSCBusBuddy/AndroidManifest.xml
+++ b/UCSCBusBuddy/AndroidManifest.xml
@@ -5,21 +5,24 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <!-- The following two permissions are not required to use
-        Google Maps Android API v2, but are recommended. -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <!--
+         The following two permissions are not required to use
+        Google Maps Android API v2, but are recommended.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -30,7 +33,8 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAFazhThybVGsQ_VCwZf74hEisPFkNe-3s"/>
+            android:value="AIzaSyAFazhThybVGsQ_VCwZf74hEisPFkNe-3s" />
+
         <activity
             android:name="com.example.ucscbusbuddy.MainActivity"
             android:label="@string/app_name" >
@@ -112,5 +116,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.ucscbusbuddy.BusScheduleActivity" />
         </activity>
+        <activity
+            android:name="com.example.ucscbusbuddy.ShowBusStop"
+            android:label="@string/title_activity_show_bus_stop" >
+        </activity>
     </application>
+
 </manifest>
