--- a/UCSCBusBuddy/AndroidManifest.xml
+++ b/UCSCBusBuddy/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
          The following two permissions are not required to use
-        Google Maps Android API v2, but are recommended.
+        Google Maps Android API v2, but are recommended.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -117,8 +117,11 @@
                 android:value="com.example.ucscbusbuddy.BusScheduleActivity" />
         </activity>
         <activity
-            android:name="com.example.ucscbusbuddy.ShowBusStop"
-            android:label="@string/title_activity_show_bus_stop" >
+            android:name="com.example.ucscbusbuddy.StopInfoActivity"
+            android:label="@string/title_activity_stop_info" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.ucscbusbuddy.SelectStopActivity" />
         </activity>
     </application>
 
